edge-directionality: merge changes from trunk: merge -r14300:14399
git-svn-id: http://chianti.ucsd.edu/svn@14400 0ecc0d97-ab19-0410-9704-bfe1a75892f5